removes references to Penn Treebank format

--- a/package.json
+++ b/package.json
@@ -5,13 +5,9 @@
   "type": "module",
   "scripts": {
     "start": "vite",
-    "start-dev": "vite --mode development",
     "start-local": "vite --open --mode localhost",
     "build": "tsc && vite build",
-    "ci-build-dev": "tsc && vite build --mode development",
-    "ci-build-qas": "tsc && vite build --mode qas",
-    "ci-build-uat": "tsc && vite build --mode uat",
-    "ci-build-prod": "tsc && vite build --mode production",
+    "ci-build": "tsc && vite build --mode development",
     "test": "vitest",
     "ci-test": "vitest run",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
