--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^2.29.1",
     "date-fns-tz": "^1.3.6",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "i18next": "^23.3.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "lodash": "^4.17.21",
