--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tycho-synviewer",
+  "name": "tycho-ud-editor",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -7,6 +7,7 @@
     "start": "vite",
     "start-local": "vite --open --mode localhost",
     "build": "tsc && vite build",
+    "build-aws": "tsc && vite build --mode localhost",
     "ci-build": "tsc && vite build --mode development",
     "test": "vitest",
     "ci-test": "vitest run",
@@ -20,8 +21,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/material": "^5.14.18",
-    "axios": "^1.7.3",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
     "bootstrap": "^5.3.1",
     "cytoscape": "^3.22.1",
     "cytoscape-dagre": "^2.5.0",
@@ -32,7 +33,6 @@
     "html2canvas": "^1.4.1",
     "i18next": "^23.3.0",
     "i18next-browser-languagedetector": "^7.1.0",
-    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-country-flag": "^3.1.0",
@@ -41,7 +41,6 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
-    "tycho-synviewer": "file:",
     "vite-plugin-checker": "^0.6.1",
     "vite-plugin-svgr": "^3.2.0"
   },
