removes everything related to diff envs

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "vite",
-    "start-local": "vite --open --mode localhost",
-    "build": "tsc && vite build --mode development",
+    "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
